--- a/man/gvar.1
+++ b/man/gvar.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "GVAR" "1" "April 2016" "" ""
+.TH "GVAR" "1" "May 2016" "" ""
 .
 .SH "NAME"
 \fBgvar\fR \- display, set, or remove global variables
@@ -22,7 +22,7 @@
 \fBgvar\fR \fB\-v\fR | \fB\-\-version\fR
 .
 .SH "DESCRIPTION"
-\fBgvar\fR is a pure Bash key\-value store where each user has a different collection of data\. The records are stored in the user\'s home directory\.
+\fBgvar\fR is a pure Bash key\-value store where each user has a different collection of data\. The records are stored in the user\'s home directory as \fB~/\.gvar\fR file\.
 .
 .SH "OPTIONS"
 The following options are available:
